<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PieceWorkApp</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Full_name">FullName</string>
    <string name="email">Email</string>
    <string name="signup">SignUp</string>
    <string name="signup_here">Don\'t have an account?<u>Sign up</u></string>
    <string name="settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="piecework">MyPieceWork</string>
    <string name="sign_up">Sign up</string>
    <string name="e_mail">Email</string>
    <string name="user_name">Username</string>
    <string name="pass_word">Password</string>
    <string name="inbox">Inbox</string>
    <string name="category">Category</string>
    <string name="create_list">Create List</string>
    <string name="home">Home</string>
    <string name="sign_in">Sign In</string>
    <string name="E_mail">Email</string>
    <string name="Pass_word">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="create_new_account">Create new account?</string>
    <string name="my_piecework">MyPieceWork</string>
    <string name="cate">CATEGORY</string>
    <string name="in_box">INBOX</string>
    <string name="create_List">CREATE LIST</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="full_name">Full name:</string>
    <string name="email_1">Email:</string>
    <string name="enter_profession">Enter profession:</string>
    <string name="choose_category">Choose category:</string>
    <string name="years_of_experience">Years of experience:</string>
    <string name="create_list1">Create List</string>
    <string name="search">Search</string>
    <string name="to">To</string>
    <string name="email_address">email address</string>
    <string name="subject">Subject</string>
    <string name="sub">Subject</string>
    <string name="message">Message</string>
    <string name="email_address1">email address</string>
    <string name="send">Send</string>

</resources>