<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".createList"
    android:background="@color/white"
    android:layout_margin="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/enter_your_details"
                android:textColor="@color/black"
                android:textSize="26sp"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/list"
                android:layout_marginStart="15sp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:paddingBottom="2sp"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="InvalidId,MissingConstraints" />

            <EditText
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginStart="15sp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/input_bg"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:drawablePadding="20sp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_name"
                android:layout_marginStart="15sp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/email_1"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="InvalidId,MissingConstraints" />

            <EditText
                android:id="@+id/MaILe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mail"
                android:layout_marginStart="15sp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/input_bg"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:drawablePadding="20sp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/MaILe"
                android:layout_marginStart="15sp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="Contact number:"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="InvalidId,MissingConstraints" />

            <EditText
                android:id="@+id/conta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact"
                android:layout_marginStart="15sp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_bg"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:drawablePadding="20sp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/profession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/conta"
                android:layout_marginStart="15sp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/enter_profession"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="InvalidId,MissingConstraints" />


            <EditText
                android:id="@+id/professional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/profession"
                android:layout_marginStart="15sp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/input_bg"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:drawablePadding="20sp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <TextView
                android:id="@+id/catego"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/professional"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/choose_category"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="InvalidId,MissingConstraints" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/input_bg"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:padding="10dp">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

            </LinearLayout>


            <TextView
                android:id="@+id/experience"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/choose"
                android:layout_marginStart="15sp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/years_of_experience"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="InvalidId,MissingConstraints,NotSibling" />

            <EditText
                android:id="@+id/Exp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/experience"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:background="@drawable/input_bg"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:drawablePadding="20sp"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                tools:ignore="MissingConstraints" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="15dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCreateList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35sp"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:text="@string/create_list1"
                    android:textSize="12sp"
                    tools:ignore="MissingConstraints" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/btnCreateList"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:text="Go to Categories"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="MissingConstraints" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>



    </RelativeLayout>



</ScrollView>